--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -5,36 +5,40 @@
     <head>
         <title>Auth App</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="<c:url value="/css/style.css"/>" media="screen" />
+        <link rel="stylesheet" href="<c:url value="/assets/css/bootstrap.css"/>" 
+              media="screen" />
+        <link rel="stylesheet" href="<c:url value="/assets/css/style.css"/>" 
+              media="screen" />
     </head>
     <body>
+
         <header>
             <hgroup>
                 <h1>AuthApp</h1>
                 <h2>Authentication System</h2>
             </hgroup>
+            <nav>
+                <ul>
+                    <li><a href="<c:url value="/"/>">Home</a></li>
+                    <c:choose>
+                        <c:when test="${empty sessionScope.currentuser}">
+                            <li>
+                                <a href="<c:url value="/login"/>">Login</a>
+                            </li>
+                        </c:when>
+                        <c:otherwise>
+                            <li><a href="<c:url value="/admin/dashboard.jsp"/>">Admin</a></li>
+                            <li><a href="<c:url value="/admin/users"/>">Usuarios</a></li>
+                            <li>
+                                <form action="<c:url value="/logout"/>" method="post" class="form-inline">
+                                    Bem Vindo ${sessionScope.currentuser} | <button type="submit" class="btn btn-default">Logout</button>
+                                </form>
+                            </li>
+                        </c:otherwise>    
+                    </c:choose>
+
+
+                </ul>
+            </nav>
         </header>
-        <nav>
-            <ul>
-                <li><a href="<c:url value="/"/>">Home</a></li>
-                <li><a href="<c:url value="/admin/dashboard.jsp"/>">Admin</a></li>
-
-                <c:choose>
-                    <c:when test="${empty sessionScope.username}">
-                        <li>
-                            <a href="<c:url value="/login"/>">Login</a>
-                        </li>
-                    </c:when>
-                    <c:otherwise>
-                        <li><a href="<c:url value="/admin/users"/>">Usuarios</a></li>
-                        <li>
-                            <form action="<c:url value="/logout"/>" method="post">
-                                Bem Vindo ${sessionScope.username} | <button type="submit">Logout</button>
-                            </form>
-                        </li>
-                    </c:otherwise>    
-                </c:choose>
-
-
-            </ul>
-        </nav>
+        <div class="container">    
