--- a/web/WEB-INF/jspf/footer.jspf
+++ b/web/WEB-INF/jspf/footer.jspf
@@ -1,7 +1,12 @@
-<%-- any content can be specified here e.g.: --%>
-<%@ page pageEncoding="UTF-8" %>
+<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<br/>
+<br/>
 <footer>
     <p>Feito com &hearts; por Dann Luciano de Menezes &lt;dannluciano@gmail.com&gt; </p>
 </footer>
-    </body>
+
+<script type="text/javascript" src="<c:url value="/assets/js/bootstrap.min.js"/>"></script>
+<script type="text/javascript" src="<c:url value="/assets/js/application.js"/>"></script>
+
+</body>
 </html>
