--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,3 +1,6 @@
+header, footer {
+    text-align: center;
+}
 
 nav ul {
     padding: 0;
@@ -17,6 +20,16 @@ nav ul li:last-child {
     margin-right: 0;
 }
 
-.form-login {
+.form-inline {
     display: inline;
+}
+
+#user-form {
+    display: none;
+}
+
+.center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
